# receipt-manager

./: .dockerignore  .gitignore  Cargo.toml  compose.yaml  deno.json  styles.scss  traefik.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml
client/: main.ts
container/development/: Containerfile
container/migrations/: Dockerfile
container/production/: Containerfile
docker/production/: Dockerfile
migrations/: 20260526212607_receipts_table.up.sql  20260526215320_add_receipts_items.down.sql  20260526215320_add_receipts_items.up.sql
src/: assets.rs  flash.rs  main.rs  routes.rs  session.rs  upload.rs
src/routes/: receipts.rs  upload.rs
terraform/: .terraform.lock.hcl  database.tf  main.tf  middleware.yaml  terraform.tfstate  variables.tf
terraform/config/: production.config
views/: header.html  header.njk  home.html  page.njk  receipt.njk  receipts.njk  success.html  success.njk  upload.njk
